feat: switch envId

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         };
 
         const app = tcb.init({
-            env: 'testldr1-3t3vf'  // 此处填入你的环境ID
+            env: 'modelcloud-8gr5ezr2ec96a9c0'  // 此处填入你的环境ID
         });
 
 
