--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset=utf-8>
     <title>3LDR Renderer</title>
     <meta name="viewport" content="width=device-width" />
+
     <style>
         #loading-bar {
             display: none;
@@ -31,8 +31,8 @@
     </style>
 </head>
 
-
 <body>
+
     <section id="loading-bar">
         <section class="loading-bar-item">
             <!-- icon -->
@@ -48,25 +48,22 @@
         <h1>网址已经过期</h1>
     </section>
 
-
-    <!-- <canvas id="canvas"></canvas> -->
     <script src="https://imgcache.qq.com/qcloud/tcbjs/1.7.0/tcb.js"></script>
 
-    <script src="js/most.min.js"></script>
-    <script src="js/three.min.js"></script>
-    <!-- <script src="js/three.js"></script> -->
-    <script src="js/OrbitControls.js"></script>
-    <script src="js/adapter/three/ThreeAdapter.js"></script>
-    <script src="js/cloud.js"></script>
+    <script src="./js/three.min.js"></script>
+    <script src="./js/OrbitControls.js"></script>
+    <script src="./js/cloud.js"></script>
 
-    <script src="js/Log.js"></script>
+    <script src="./js/three.js"></script>
+    <script src="./js/OrbitControls.js"></script>
+    <script src="./js/external/render_engine/three/ThreeRenderEngineExternal.js"></script>
+    <script src="./js/external/network/NetworkExternal.js"></script>
 
 
+    <script src="./js/vconsole.js"></script>
 
-    <!-- <script src="js/vconsole.min.js"></script> -->
-    <script src="js/vconsole.js"></script>
-
-    <script src="dist/ldr.js"></script>
+    <script src="./js/ldrRender1Service.js"></script>
+    <script src="./js/ldrLoaderService.js"></script>
 
     <script>
         let loadingBar = (function () {
@@ -129,10 +126,12 @@
             }
 
 
+            ldrRender1Service.ExternalAPI.setRenderEngineExternal(THREERenderEngineExternal);
+            ldrLoaderService.ExternalAPI.setNetworkEngineExternal(NetworkExternal);
+
+
             cloud.setApp(app);
             cloud.setTcb(tcb);
-
-            ldr.Adapter.setAdapter(THREEAdapter);
 
             let startTime = new Date();
 
@@ -141,46 +140,8 @@
             let modelUrl = cloud.getStoragePrefix() + "models/" + model;
 
 
-
-            // let url = window.location.href;
-
-            // let urlObject = new URL(url);
-            // let searchParams = new URLSearchParams(urlObject.search);
-
-            // let model = null;
-
-            // if (searchParams.has("model")) {
-            //     localStorage.setItem("model", searchParams.get("model"));
-            //     window.location.href = url.slice(0, url.indexOf('?'));
-            //     return;
-            // }
-            // else {
-            //     model = cloud.getStoragePrefix() + "models/" + localStorage.getItem("model");
-            // }
-
-            // console.log("model: ", model);
-
-
-            // let model = cloud.getStoragePrefix() + "models/J20(0626).ldr"
-            // let model = cloud.getStoragePrefix() + "models/a1.ldr"
-            // let model = cloud.getStoragePrefix() + "models/corvette_full.mpd"
-            // let model = cloud.getStoragePrefix() + "models/Apple Tree Final.ldr"
-            // let model = cloud.getStoragePrefix() + "models/jazlecraz_woodland_retreat (1).ldr"
-            // let model = cloud.getStoragePrefix() + "models/jazlecraz_woodland_retreat (1).ldr"
-            // let model = cloud.getStoragePrefix() + "models/42055-bucket-excavator-3-lxf_orig.ldr"
-            // let model = cloud.getStoragePrefix() + "models/4x4 pickup.ldr"
-
             // Set up camera:
-            // let camera = new THREE.OrthographicCamera(-1, 1, 1, -1, 0.1, 1000000);
-            // camera.position.set(10000, 7000, 10000);
-            // camera.lookAt(new THREE.Vector3());
-
-
-            let camera = new THREE.PerspectiveCamera(40, window.innerWidth / window.innerHeight, 0.1, 1000000);
-            // camera.position.set(1000, 700, 200);
-            camera.position.set(-500, 700, 1000);
-            camera.lookAt(new THREE.Vector3());
-
+            let camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000000);
 
 
             // Set up scene:
@@ -196,25 +157,27 @@
             baseObject.add(sixteenObject);
             baseObject.add(transObject);
             scene.add(baseObject);
-            let mc = new ldr.LDRMeshCollector(opaqueObject, sixteenObject, transObject);
 
             // Set up renderer:
-            // let renderer = new THREE.WebGLRenderer({ antialias: true, canvas: document.querySelector("canvas") });
             let renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setPixelRatio(window.devicePixelRatio);
             function render() {
-                renderer.render(scene, camera);
+                let startTime = new Date();
+
+                // renderer.render(scene, camera);
+                ldrRender1Service.RenderAPI.render(scene, camera, renderer);
+
+                console.log("Model rendered in " + (new Date() - startTime) + "ms.");
             }
 
-
             function onWindowResize() {
-                // camera.left = -window.innerWidth;
-                // camera.right = window.innerWidth;
-                // camera.top = window.innerHeight;
-                // camera.bottom = -window.innerHeight;
                 camera.updateProjectionMatrix();
                 renderer.setSize(window.innerWidth, window.innerHeight);
+
+                // setInterval(() =>{
                 render();
+                // }, 16)
+
             }
 
             // React to user input:
@@ -222,26 +185,23 @@
             controls.addEventListener('change', render);
             window.addEventListener('resize', onWindowResize, false);
 
-            // Three.js loader for LDraw models:
-            let ldrLoader;
-
-            ldrLoader = new ldr.LDRLoader({
-                buildAllPossibleUrls: (id) => {
-                    let lowerID = id.toLowerCase();
-                    return [
-                        cloud.getStoragePrefix() + "ldraw_parts_total/" + lowerID
-                    ];
-                }
-            });
 
             loadingBar.setLoadingProgress(0.0);
             loadingBar.show();
 
-            ldrLoader.load(modelUrl)
+            ldrLoaderService.LoadAPI.load(
+                (id) => {
+                    let lowerID = id.toLowerCase();
+                    return [
+                        cloud.getStoragePrefix() + "ldraw_parts_total/" + lowerID,
+                        cloud.getStoragePrefix() + "ldraw_parts_total_custom/" + lowerID
+                    ];
+                },
+                modelUrl
+            )
                 .subscribe({
                     next: (data) => {
-                        // console.log("next: ", data)
-                        loadingBar.setLoadingProgress(ldrLoader.getLoadingProgress());
+                        loadingBar.setLoadingProgress(ldrLoaderService.LoadAPI.getLoadingProgress());
                     },
                     error: (e) => {
                         console.error(e);
@@ -253,25 +213,51 @@
 
                         let startTime2 = new Date();
 
-                        ldrLoader.generate(4, mc);
+                        // ldrLoader.generate(4, mc);
+                        ldrRender1Service.BuildAPI.buildScene(
+                            [
+                                ldrLoaderService.LoadAPI.getMainModelPartTypeData(),
+                                ldrLoaderService.LoadAPI.getAllPartTypeDataMap()
+                            ],
+                            [
+                                opaqueObject, sixteenObject, transObject
+                            ],
+                            4);
 
                         // Find center of drawn model:
-                        let b = mc.boundingBox;
+                        // let b = mc.boundingBox;
+                        let b = ldrRender1Service.MeshCollectorAPI.getBoundingBox();
+
                         let elementCenter = new THREE.Vector3();
                         b.getCenter(elementCenter);
                         baseObject.position.set(-elementCenter.x, -elementCenter.y, -elementCenter.z);
                         //baseObject.add(new THREE.Box3Helper(b, 0x0000FF)); // Uncomment if you want to see the bounding box
 
-                        camera.zoom = window.innerWidth / b.min.distanceTo(b.max);
+
+                        let boxSize = new THREE.Vector3();
+                        b.getSize(boxSize);
+
+                        camera.position.set(- boxSize.x / 2 * 4, boxSize.y / 2 * 4, boxSize.z / 2 * 8);
+
+                        camera.lookAt(new THREE.Vector3(
+                            0, 0, 0
+                        ));
+
+
+                        // camera.zoom = window.innerWidth / b.min.distanceTo(b.max);
+
                         onWindowResize();
 
 
-                        console.log("Model rendered in " + (new Date() - startTime2) + "ms.");
+                        console.log("Model build scene in " + (new Date() - startTime2) + "ms.");
+
+
 
                         document.body.appendChild(renderer.domElement);
                     }
                 });
         };
+
 
         const app = tcb.init({
             env: 'modelcloud-8gr5ezr2ec96a9c0'  // 此处填入你的环境ID
